--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -167,7 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RPGPlugin\IRole.cs" />
-    <Compile Include="RPGPlugin\Miner.cs" />
+    <Compile Include="RPGPlugin\Roles\Miner.cs" />
     <Compile Include="RPGPlugin\PlayerData.cs" />
     <Compile Include="RPGPlugin\Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
