--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -206,6 +206,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <Resource Include="pngegg %281%29.png" />
+    <Resource Include="6be9c39e0624744e484e61beafd9a13c.jpg" />
     <Content Include="manifest.xml" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup>
