--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -129,11 +129,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RPGPlugin\Behavior\ExpMiningScript.cs" />
-    <Compile Include="RPGPlugin\Config\MinerConfig.cs" />
-    <Compile Include="RPGPlugin\Interfaces\IRole.cs" />
-    <Compile Include="RPGPlugin\Patches\DrillPatch.cs" />
-    <Compile Include="RPGPlugin\Roles\Miner.cs" />
+    <Compile Include="RPGPlugin\Behavior\PointManagementSystem.cs" />
     <Compile Include="RPGPlugin\Config\PlayerData.cs" />
     <Compile Include="RPGPlugin\Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
