--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -154,6 +154,7 @@
     <Compile Include="RPGPlugin\Torch GUI\RPGPluginControl.xaml.cs">
       <DependentUpon>RPGPluginControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RPGPlugin\Utils\FileManager.cs" />
     <EmbeddedResource Include="RPGPlugin\Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
