1 A function for adding new ores has been added, allowing the user to define the name of an ore and the experience for mining it. 2 The ability to edit existing ores, including changing the experience value assigned to each ore, has been implemented. 3. the function of deleting selected ores from the configuration list has been implemented.

--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -154,6 +154,9 @@
     <Compile Include="RPGPlugin\RPGPlugin.cs" />
     <Compile Include="RPGPlugin\RPGPluginCommands.cs" />
     <Compile Include="RPGPlugin\Config\RPGPluginConfig.cs" />
+    <Compile Include="RPGPlugin\Torch GUI\AddOreWindow.xaml.cs">
+      <DependentUpon>AddOreWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RPGPlugin\Torch GUI\RPGPluginControl.xaml.cs">
       <DependentUpon>RPGPluginControl.xaml</DependentUpon>
     </Compile>
@@ -180,6 +183,10 @@
     <Content Include="manifest.xml" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="RPGPlugin\Torch GUI\AddOreWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="RPGPlugin\Torch GUI\RPGPluginControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
