remove unnecessary photo

--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -181,8 +181,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Resource Include="Zrzut ekranu 2023-04-09 220438.png" />
     <Resource Include="comingsoon.png" />
+    <Resource Include="Donate-Button.png" />
     <Content Include="manifest.xml" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup>
