--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -37,6 +37,9 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ConcurrentObservableCollections, Version=1.1.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\ConcurrentObservableCollections.1.1.9\lib\netstandard2.0\ConcurrentObservableCollections.dll</HintPath>
+    </Reference>
     <Reference Include="netstandard" />
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -113,7 +116,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RPGPlugin\Behavior\MinerClass.cs" />
     <Compile Include="RPGPlugin\Behavior\PointManagementSystem.cs" />
+    <Compile Include="RPGPlugin\Behavior\WarriorClass.cs" />
     <Compile Include="RPGPlugin\Config\HunterConfig.cs" />
     <Compile Include="RPGPlugin\Config\MinerConfig.cs" />
     <Compile Include="RPGPlugin\Config\PlayerData.cs" />
@@ -146,6 +151,7 @@
       <DependentUpon>RPGPluginControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="RPGPlugin\Utils\FileManager.cs" />
+    <Compile Include="RPGPlugin\Utils\Helper.cs" />
     <Compile Include="RPGPlugin\Utils\Objects.cs" />
     <EmbeddedResource Include="RPGPlugin\Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
