I always wanted to be an artist, my skills with a pencil were absolutely horrible.  Somebody told me I'm an abstract artist though.  I don't do any pictures these days but I can still abstract away!!
- Classes are abstracted to a base class that will perform some of the work and allow anybody who wants to add a new class a simpler way to autogenerate the required methods, properties, and the things dreams are made from.

- Next will be abstracting the class configs to a base class.  This should make adding roles incredibly easy.

--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -113,6 +113,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RPGPlugin\Behavior\ClassesBase.cs" />
     <Compile Include="RPGPlugin\Behavior\MinerClass.cs" />
     <Compile Include="RPGPlugin\Behavior\PointManagementSystem.cs" />
     <Compile Include="RPGPlugin\Behavior\WarriorClass.cs" />
