correction of fatal errorFull addition of Warrior role (I haven't tested and hope it works)

--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -121,6 +121,7 @@
     <Compile Include="RPGPlugin\Config\MinerConfig.cs" />
     <Compile Include="RPGPlugin\Config\PlayerData.cs" />
     <Compile Include="RPGPlugin\Config\WarriorConfig.cs" />
+    <Compile Include="RPGPlugin\Patches\BlockDamagePatch.cs" />
     <Compile Include="RPGPlugin\Patches\DrillPatch.cs" />
     <Compile Include="RPGPlugin\Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
