--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -113,14 +113,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RPGPlugin\Behavior\ClassesBase.cs" />
-    <Compile Include="RPGPlugin\Behavior\MinerClass.cs" />
-    <Compile Include="RPGPlugin\Behavior\PointManagementSystem.cs" />
-    <Compile Include="RPGPlugin\Behavior\WarriorClass.cs" />
-    <Compile Include="RPGPlugin\Config\HunterConfig.cs" />
-    <Compile Include="RPGPlugin\Config\MinerConfig.cs" />
-    <Compile Include="RPGPlugin\Config\PlayerData.cs" />
-    <Compile Include="RPGPlugin\Config\WarriorConfig.cs" />
     <Compile Include="RPGPlugin\Patches\DrillPatch.cs" />
     <Compile Include="RPGPlugin\Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -135,10 +127,19 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="RPGPlugin\Roles\Behavior\ClassesBase.cs" />
+    <Compile Include="RPGPlugin\Roles\Behavior\MinerClass.cs" />
+    <Compile Include="RPGPlugin\Roles\Behavior\SampleClass.cs" />
+    <Compile Include="RPGPlugin\Roles\Behavior\WarriorClass.cs" />
+    <Compile Include="RPGPlugin\Roles\Config\configBase.cs" />
+    <Compile Include="RPGPlugin\Roles\Config\HunterConfig.cs" />
+    <Compile Include="RPGPlugin\Roles\Config\MinerConfig.cs" />
+    <Compile Include="RPGPlugin\Roles\Config\PlayerData.cs" />
+    <Compile Include="RPGPlugin\Roles\Config\SampleConfig.cs" />
+    <Compile Include="RPGPlugin\Roles\Config\WarriorConfig.cs" />
     <Compile Include="RPGPlugin\RPGPluginManager.cs" />
     <Compile Include="RPGPlugin\RPGPlugin.cs" />
     <Compile Include="RPGPlugin\RPGPluginCommands.cs" />
-    <Compile Include="RPGPlugin\Config\RPGPluginConfig.cs" />
     <Compile Include="RPGPlugin\Torch GUI\EditOreWindow.xaml.cs">
       <DependentUpon>EditOreWindow.xaml</DependentUpon>
     </Compile>
@@ -151,6 +152,7 @@
     <Compile Include="RPGPlugin\Utils\FileManager.cs" />
     <Compile Include="RPGPlugin\Utils\Helper.cs" />
     <Compile Include="RPGPlugin\Utils\Objects.cs" />
+    <Compile Include="RPGPlugin\Utils\RPGPluginConfig.cs" />
     <EmbeddedResource Include="RPGPlugin\Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -190,6 +192,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RPGPlugin\Roles\" />
   </ItemGroup>
   <Target Name="Zip" BeforeTargets="AfterBuild">
     <MakeDir Directories="$(SolutionDir)\Build\" />
