--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -48,6 +48,7 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="Sandbox.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>GameBinaries\Sandbox.Common.dll</HintPath>
