Added notes on all changes.  Reverted main config to XML.  The main config needs to be as easy as possible for the user to edit.  Json confuses people who dont work with json.  Created serializable tuple.  Class roles are auto-loaded... no need to manually load them on plugin init.  Updated GUI.  Removed allot of formatting that isnt needed.  Slight reorder of positions.  Nobody uses Torch fullscreen, specially if they have multiple instances open so we should design for a slim view.

--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -151,7 +151,7 @@
       <DependentUpon>RPGPluginControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="RPGPlugin\Utils\FileManager.cs" />
-    <Compile Include="RPGPlugin\Utils\Helper.cs" />
+    <Compile Include="RPGPlugin\Utils\RoleManager.cs" />
     <Compile Include="RPGPlugin\Utils\Objects.cs" />
     <Compile Include="RPGPlugin\Utils\RPGPluginConfig.cs" />
     <EmbeddedResource Include="RPGPlugin\Properties\Resources.resx">
@@ -196,7 +196,9 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="RPGPlugin\Roles\View\" />
+  </ItemGroup>
   <Target Name="Zip" BeforeTargets="AfterBuild">
     <MakeDir Directories="$(SolutionDir)\Build\" />
     <ZipDirectory SourceDirectory="$(OutputPath)" DestinationFile="$(SolutionDir)\Build\$(MSBuildProjectName).zip" Overwrite="true" />
