Store skill points in the _PlayerData.SkillPoints field.
1 Added a new SkillPoints field to the _PlayerData class to store the player's skill points.
2. Updated AddClassExp method in MinerClass to use SkillPoints field instead of storing skill points in a tuple.
3. Added a message to inform the player when skill points are received after advancing to the next level.

--- a/RPGPlugin.csproj
+++ b/RPGPlugin.csproj
@@ -150,6 +150,7 @@
     <Compile Include="RPGPlugin\Torch GUI\RPGPluginControl.xaml.cs">
       <DependentUpon>RPGPluginControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RPGPlugin\Utils\CalculateSkillPoints.cs" />
     <Compile Include="RPGPlugin\Utils\FileManager.cs" />
     <Compile Include="RPGPlugin\Utils\RoleManager.cs" />
     <Compile Include="RPGPlugin\Utils\Objects.cs" />
